<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultado"
        android:layout_width="378dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridLayout" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultado"
        android:columnCount="4"
        app:layout_constraintBottom_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="381dp"
        android:layout_height="441dp"
        android:layout_marginTop="240dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.28">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#00000F"
                android:onClick="numeros"
                android:text="7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="9" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#3F51B5"
                android:onClick="operadores"
                android:text="÷" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#050505"
                android:onClick="numeros"
                android:text="6" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#3F51B5"
                android:onClick="operadores"
                android:text="×" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="3" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#3F51B5"
                android:onClick="operadores"
                android:text="-" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPunto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="punto"
                android:text="." />

            <Button
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="numeros"
                android:text="0" />

            <Button
                android:id="@+id/btnPotencia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#000000"
                android:onClick="operadores"
                android:text="^" />

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:backgroundTint="#3F51B5"
                android:onClick="operadores"
                android:text="+" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Fibonacci"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#CDDC39"
                android:onClick="Fibonacci"
                android:text="Fibonacci" />

            <Button
                android:id="@+id/AC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#EF4134"
                android:onClick="ACReset"
                android:text="AC" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_weight="1"
                android:backgroundTint="#E91E63"
                android:onClick="igual"
                android:text="=" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>